Array and Object destructuring, using es6 syntax

--- a/README.mdx
+++ b/README.mdx
@@ -47,3 +47,6 @@
             - "noUnusedLoal": this will not allow create a local variable that's not used.
             - "noUnusedGlobal": 
             - "noUnusedParameter": this does not allow unsed parameter.
+
+    - Arrays Destructuring: pulling data from an array using es2016 syntax
+    - Object Destructuring: Pulling data from an object using es2016 syntax
