spread operator with array and object

--- a/README.mdx
+++ b/README.mdx
@@ -1,4 +1,4 @@
-# Typescript code cheat sheet
+# Typescript/JavaScript Topic sheet
 
 ### Overview
 - Introdution of Typescript
@@ -50,3 +50,4 @@
 
     - Arrays Destructuring: pulling data from an array using es2016 syntax
     - Object Destructuring: Pulling data from an object using es2016 syntax
+    - Spread Operator : It hepls create a shalow copy of an array or object.
