rest parttern and rest parameter

--- a/README.mdx
+++ b/README.mdx
@@ -50,4 +50,6 @@
 
     - Arrays Destructuring: pulling data from an array using es2016 syntax
     - Object Destructuring: Pulling data from an object using es2016 syntax
-    - Spread Operator : It hepls create a shalow copy of an array or object.
+    - Spread Operator : It hepls create a shalow copy of an array or object. Used at the right hand side of the assignment Operator.
+    - Rest parttern and : It's used to pack the remaining of an array values together in a single variable. It's used on the left hand of the assignment operator.
+    - Rest parameter: the rest parameter enabls you to pass more values in a single variable in a parameter.
