--- a/README.mdx
+++ b/README.mdx
@@ -53,3 +53,5 @@
     - Spread Operator : It hepls create a shalow copy of an array or object. Used at the right hand side of the assignment Operator.
     - Rest parttern and : It's used to pack the remaining of an array values together in a single variable. It's used on the left hand of the assignment operator.
     - Rest parameter: the rest parameter enabls you to pass more values in a single variable in a parameter.
+    - Nullish Coalescing Operator: (??) It enables us to return valid values including an empty string and treats null and undefined as falsy values.
+    
