--- a/README.mdx
+++ b/README.mdx
@@ -54,4 +54,5 @@
     - Rest parttern and : It's used to pack the remaining of an array values together in a single variable. It's used on the left hand of the assignment operator.
     - Rest parameter: the rest parameter enabls you to pass more values in a single variable in a parameter.
     - Nullish Coalescing Operator: (??) It enables us to return valid values including an empty string and treats null and undefined as falsy values.
+    - Optional chaining: It enables to check for an object if it exist, before checking it's values.
     
